--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <![endif]-->
 
         <div id="loadingMessage">🎥 Unable to access video stream (please make sure you have a webcam enabled)</div>
-        
+
         <canvas id="canvas" hidden></canvas>
 
         <div id="output" hidden>
@@ -76,19 +76,19 @@
                     canvas.drawImage(video, 0, 0, canvasElement.width, canvasElement.height);
                     var imageData = canvas.getImageData(0, 0, canvasElement.width, canvasElement.height);
                     var code = jsQR(imageData.data, imageData.width, imageData.height, {
-                    inversionAttempts: "dontInvert",
+                        inversionAttempts: "dontInvert",
                     });
                     if (code) {
-                    drawLine(code.location.topLeftCorner, code.location.topRightCorner, "#FF3B58");
-                    drawLine(code.location.topRightCorner, code.location.bottomRightCorner, "#FF3B58");
-                    drawLine(code.location.bottomRightCorner, code.location.bottomLeftCorner, "#FF3B58");
-                    drawLine(code.location.bottomLeftCorner, code.location.topLeftCorner, "#FF3B58");
-                    outputMessage.hidden = true;
-                    outputData.parentElement.hidden = false;
-                    outputData.innerText = code.data;
+                        drawLine(code.location.topLeftCorner, code.location.topRightCorner, "#FF3B58");
+                        drawLine(code.location.topRightCorner, code.location.bottomRightCorner, "#FF3B58");
+                        drawLine(code.location.bottomRightCorner, code.location.bottomLeftCorner, "#FF3B58");
+                        drawLine(code.location.bottomLeftCorner, code.location.topLeftCorner, "#FF3B58");
+                        outputMessage.hidden = true;
+                        outputData.parentElement.hidden = false;
+                        outputData.innerText = code.data;
                     } else {
-                    outputMessage.hidden = false;
-                    outputData.parentElement.hidden = true;
+                        // outputMessage.hidden = false;
+                        // outputData.parentElement.hidden = true;
                     }
                 }
                 requestAnimationFrame(tick);
