--- a/index.html
+++ b/index.html
@@ -86,9 +86,23 @@
                         outputMessage.hidden = true;
                         outputData.parentElement.hidden = false;
                         outputData.innerText = code.data;
+
+                        if (valideURL(code.data)) {
+                            window.location.href = code.data;
+                        }
                     }
                 }
                 requestAnimationFrame(tick);
+            }
+
+            function validURL(str) {
+                var pattern = new RegExp('^(https?:\\/\\/)?'+ // protocol
+                    '((([a-z\\d]([a-z\\d-]*[a-z\\d])*)\\.)+[a-z]{2,}|'+ // domain name
+                    '((\\d{1,3}\\.){3}\\d{1,3}))'+ // OR ip (v4) address
+                    '(\\:\\d+)?(\\/[-a-z\\d%_.~+]*)*'+ // port and path
+                    '(\\?[;&a-z\\d%_.~+=-]*)?'+ // query string
+                    '(\\#[-a-z\\d_]*)?$','i'); // fragment locator
+                return !!pattern.test(str);
             }
         </script>
     </body>
